--- a/package.json
+++ b/package.json
@@ -8,14 +8,23 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "devDependencies": {
-    "aws-cdk": "1.118.0",
     "@aws-cdk/assert": "1.118.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "aws-cdk": "1.118.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^7.0.1",
     "jest": "^26.4.2",
+    "lint-staged": "^11.1.2",
+    "prettier": "^2.3.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
@@ -25,5 +34,15 @@
     "@aws-cdk/aws-sns-subscriptions": "1.118.0",
     "@aws-cdk/aws-sqs": "1.118.0",
     "@aws-cdk/core": "1.118.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "eslint --quite"
+    ]
   }
 }
