--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@aws-cdk/aws-sns": "1.118.0",
     "@aws-cdk/aws-sns-subscriptions": "1.118.0",
     "@aws-cdk/aws-sqs": "1.118.0",
-    "@aws-cdk/core": "1.118.0"
+    "@aws-cdk/core": "1.118.0",
+    "aws-sdk": "^2.970.0"
   },
   "husky": {
     "hooks": {
