--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.118.0",
+    "@aws-cdk/aws-dynamodb": "^1.118.0",
     "@aws-cdk/aws-lambda": "^1.118.0",
     "@aws-cdk/aws-sns": "1.118.0",
     "@aws-cdk/aws-sns-subscriptions": "1.118.0",
