--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.118.0",
+    "@aws-cdk/assert": "^1.118.0",
     "@types/aws-lambda": "^8.10.82",
-    "@types/jest": "^26.0.10",
+    "@types/jest": "^26.0.24",
     "@types/node": "10.17.27",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
@@ -23,7 +23,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^7.0.1",
-    "jest": "^26.4.2",
+    "jest": "^26.6.3",
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
     "ts-jest": "^26.2.0",
