--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.118.0",
+    "@aws-cdk/aws-codepipeline": "^1.118.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.118.0",
     "@aws-cdk/aws-dynamodb": "^1.118.0",
     "@aws-cdk/aws-lambda": "^1.118.0",
     "@aws-cdk/aws-sns": "1.118.0",
     "@aws-cdk/aws-sns-subscriptions": "1.118.0",
     "@aws-cdk/aws-sqs": "1.118.0",
-    "@aws-cdk/core": "1.118.0",
+    "@aws-cdk/core": "^1.118.0",
+    "@aws-cdk/pipelines": "^1.118.0",
     "aws-sdk": "^2.970.0",
     "cdk-dynamo-table-viewer": "^0.1.61"
   },
